@@ -5,14 +5,13 @@ org.gradle.daemon=false
 
 mod_id=sanitydim
 spec_version=1
-mod_version=1.0.0
+mod_version=1.0.1
 developer=croissantnova
-archives_base_name=SanityDescentIntoMadness
+archives_base_name=sanitydim
 
 minecraft_version=1.19.4
 mc_display_version=mc1.19.4
 forge_version=45.1.0
 
 geckolib_version=4.2
-
 parchment_version=2023.03.12-1.19.3
