@@ -1,2 +1,5 @@
+mc1.19.4-forge45.1.0-1.0.1:
+- Minor config and GUI adjustments
+
 mc1.19.4-forge45.1.0-1.0.0:
 - Initial release
